Minor Cleanups This version is good to go!

--- a/Png_to_Hex/Png_to_Hex.vcxproj.filters
+++ b/Png_to_Hex/Png_to_Hex.vcxproj.filters
@@ -78,5 +78,6 @@
     <Text Include="notes.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="images\5x2_grayscale_counter.txt" />
   </ItemGroup>
 </Project>
