--- a/Png_to_Hex/Png_to_Hex.vcxproj
+++ b/Png_to_Hex/Png_to_Hex.vcxproj
@@ -162,6 +162,7 @@
     <Image Include="8_bit_images\MrCat.png" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="images\5x2_grayscale_counter.txt" />
     <Text Include="notes.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
