--- a/Png_to_Hex/Png_to_Hex.vcxproj.filters
+++ b/Png_to_Hex/Png_to_Hex.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Resource Files\8_bit_images">
       <UniqueIdentifier>{d7394930-28f8-4a97-aca7-1ded82dde314}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\16_bit_images">
+      <UniqueIdentifier>{8e2efe1c-db0b-4bc0-b801-edff9dd86c2b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
@@ -49,35 +52,34 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="4x5.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="5x2_grayscale_counter.png">
-      <Filter>Resource Files</Filter>
-    </Image>
     <Image Include="8_bit_images\MrCat.png">
       <Filter>Resource Files\8_bit_images</Filter>
     </Image>
-    <Image Include="8_bit_images\8w_6h_columns.png">
+    <Image Include="8_bit_images\8x6_columns.png">
       <Filter>Resource Files\8_bit_images</Filter>
     </Image>
-    <Image Include="8_bit_images\8w_6h_rgb.png">
+    <Image Include="8_bit_images\8x6_rgb.png">
       <Filter>Resource Files\8_bit_images</Filter>
     </Image>
-    <Image Include="8_bit_images\10w_5h_black.png">
+    <Image Include="8_bit_images\10x5_black.png">
       <Filter>Resource Files\8_bit_images</Filter>
     </Image>
-    <Image Include="8_bit_images\10w_5h_gradient.png">
+    <Image Include="8_bit_images\10x5_gradient.png">
       <Filter>Resource Files\8_bit_images</Filter>
     </Image>
     <Image Include="8_bit_images\Bridge_2560x2160.png">
       <Filter>Resource Files\8_bit_images</Filter>
     </Image>
+    <Image Include="16_bit_images\5x4_rows.png">
+      <Filter>Resource Files\16_bit_images</Filter>
+    </Image>
+    <Image Include="16_bit_images\16b_bird.png">
+      <Filter>Resource Files\16_bit_images</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="notes.txt">
-      <Filter>Resource Files</Filter>
-    </Text>
-    <Text Include="images\5x2_grayscale_counter.txt" />
+    <None Include="16_bit_images\16b_5x2_black.png">
+      <Filter>Resource Files\16_bit_images</Filter>
+    </None>
   </ItemGroup>
 </Project>
