--- a/Png_to_Hex/Png_to_Hex.vcxproj
+++ b/Png_to_Hex/Png_to_Hex.vcxproj
@@ -152,8 +152,13 @@
     <ClInclude Include="spng.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="16_bit_images\16b_16x2_gray_counter.png" />
+    <Image Include="16_bit_images\16b_16x2_rgb_counter.png" />
+    <Image Include="16_bit_images\16b_5x3_blue.png" />
+    <Image Include="16_bit_images\16b_5x4_rows.png" />
     <Image Include="16_bit_images\16b_bird.png" />
-    <Image Include="16_bit_images\5x4_rows.png" />
+    <Image Include="16_bit_images\16b_gradient.png" />
+    <Image Include="16_bit_images\16b_grayscale.png" />
     <Image Include="8_bit_images\10x5_black.png" />
     <Image Include="8_bit_images\10x5_gradient.png" />
     <Image Include="8_bit_images\8x6_columns.png" />
@@ -162,7 +167,7 @@
     <Image Include="8_bit_images\MrCat.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="16_bit_images\16b_5x2_black.png" />
+    <None Include="..\x64\Release\TEST_RUN.cmd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
