--- a/Png_to_Hex/Png_to_Hex.vcxproj.filters
+++ b/Png_to_Hex/Png_to_Hex.vcxproj.filters
@@ -70,7 +70,22 @@
     <Image Include="8_bit_images\Bridge_2560x2160.png">
       <Filter>Resource Files\8_bit_images</Filter>
     </Image>
-    <Image Include="16_bit_images\5x4_rows.png">
+    <Image Include="16_bit_images\16b_gradient.png">
+      <Filter>Resource Files\16_bit_images</Filter>
+    </Image>
+    <Image Include="16_bit_images\16b_grayscale.png">
+      <Filter>Resource Files\16_bit_images</Filter>
+    </Image>
+    <Image Include="16_bit_images\16b_5x3_blue.png">
+      <Filter>Resource Files\16_bit_images</Filter>
+    </Image>
+    <Image Include="16_bit_images\16b_5x4_rows.png">
+      <Filter>Resource Files\16_bit_images</Filter>
+    </Image>
+    <Image Include="16_bit_images\16b_16x2_gray_counter.png">
+      <Filter>Resource Files\16_bit_images</Filter>
+    </Image>
+    <Image Include="16_bit_images\16b_16x2_rgb_counter.png">
       <Filter>Resource Files\16_bit_images</Filter>
     </Image>
     <Image Include="16_bit_images\16b_bird.png">
@@ -78,8 +93,8 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <None Include="16_bit_images\16b_5x2_black.png">
-      <Filter>Resource Files\16_bit_images</Filter>
+    <None Include="..\x64\Release\TEST_RUN.cmd">
+      <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
 </Project>
